--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "homepage": "https://hyeincha.github.io/wanted-pre-onboarding-frontend.git"
 }
